--- a/.sample.env
+++ b/.sample.env
@@ -1,7 +1,7 @@
 # Facebook App Configuration
-ACCESS_TOKEN=ADD_APP_TOKEN_HERE
-APP_SECRET=ADD_APP_SECRET_HERE
-APP_ID=ADD_APP_ID_HERE
+ACCESS_TOKEN=
+APP_SECRET=
+APP_ID=
 VERIFY_TOKEN=ADD_VERIFY_TOKEN_HERE
 
 # Server Configuration
